2010-09-03  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c :
	  Fix error in opt_args() when -M is used.

	* src/pdsh/mod.c :
	  Ensure functions used by list_for_each always return 0
	  so that the list traversal isn't short-circuited by
	  recoverable errors.

	* src/modules/genders.c :
	  Don't let genders_file be NULL. Instead manually set
	  to "/etc/genders" for improved error message, and to
	  avoid segfault when printing error message.

2010-09-02  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.21.

	* doc/pdsh.1.in :
	  Document PDSH_GENDERS_DIR and PDSH_GENDERS_FILE.

	* src/common/xstring.c :
	  Handle errors from XSI-compliant version of strerror_r()
	  in xstrerrorcat() implementation.

2010-09-01  Mark Grondona <mgrondona@llnl.gov>

	* README.modules, doc/pdcp.1.in, doc/pdsh.1.in :
	  Update documentation: adding -M and PDSH_MISC_MODULES.

	* src/pdsh/opt.c :
	  Add new option -M to allow named misc modules to be
	  pre-initialized before others, thus overriding which
	  module is loaded when there is a conflict.

	* src/pdsh/mod.c :
	  Don't generate an error message when module options
	  conflict, since there is now a way to override which
	  module is loaded over another.

	* src/pdsh/opt.c, src/pdsh/opt.h, src/pdsh/main.c :
	  Add opt_args_early function to process options that
	  need to be handled before module loading.

	* src/pdsh/opt.c, src/pdsh/mod.c :
	  New environment variable PDSH_MISC_MODULES may be used to
	  force-initialize a list of misc modules before the others,
	  thus allowing a choice between conflicting modules.

	* src/pdsh/main.c :
	  Call opt_env() before loading modules.

	* src/pdsh/mod.c :
	  Only print module options if the module has been initialized.

	* src/pdsh/mod.c :
	  Split module registration and initialization into two
	  separate functions. First register all modules, then try
	  to initialize them later. This will allow for better filtering
	  of conflicting modules.

	* src/pdsh/mod.c :